--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,5 @@
+* Enhance `getClass` performance. [#747 state:resolved] (Mark Legate, Tobie Langel)
+
 * Fix `PeriodicalExecuter` so that it no longer suppresses exceptions. [#696 state:resolved] (Samuel Lebeau, Yaffle)
 
 * Fix issue related to escaping of selectors for querySelectorAll. [#559 state:resolved] (Jorn Holm)
